--- a/HowTo_Use_BiomassProduct.ipynb
+++ b/HowTo_Use_BiomassProduct.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ac3d59b-5f29-4362-9dec-3652e4a43413",
+   "id": "eb94d937-1403-4169-8e68-c4e7ea187593",
    "metadata": {},
    "source": [
-    "# 🌍 BIOMASS SCS Product Explorer\n",
+    "# 🌍 BIOMASS L1A Product Explorer\n",
     "\n",
     "(c) European Space Agency (ESA) - Licensed under  ESA Software Community Licence Permissive (Type 3) – v2.4\n",
     "\n",
@@ -30,10 +30,13 @@
    "outputs": [],
    "source": [
     "import BiomassProduct\n",
-    "\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "# Define the path to the STA product\n",
-    "test_scs_path = r\"..\\L1a\\BIO_S3_SCS__1S_20170225T094537_20170225T094558_I_G01_M02_C01_T017_F001_01_DBEMV5\"\n",
-    "product_SCS = BiomassProduct.BiomassProductSCS(test_scs_path)\n"
+    "test_scs_path = r\"E:\\BIOMASS\\03_SCRIPTS\\AMAZON\\WD_F158_1C\\BIO_S1_SCS__1S_20250606T221429_20250606T221450_C_G___M___C___T____F158_01_DEFS2A\"\n",
+    "\n",
+    "product_SCS = BiomassProduct.BiomassProductSCS(test_scs_path)"
    ]
   },
   {
@@ -52,11 +55,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"MPH XML:      \", product_SCS.mph)\n",
     "print(\"ABS TIFF:     \", product_SCS.measurement_abs_file)\n",
     "print(\"PHASE TIFF:   \", product_SCS.measurement_phase_file)\n",
     "print(\"LUT NetCDF:   \", product_SCS.annotation_lut_file)\n",
     "print(\"Primary XML:  \", product_SCS.annotation_xml_file)\n",
-    "print(\"Quicklook PNG:\", product_SCS.preview_ql_file) "
+    "print(\"Quicklook PNG:\", product_SCS.preview_ql_file) \n",
+    "print(product_SCS.sourceProducts[0])\n",
+    "print(product_SCS.sourceProducts[1])"
    ]
   },
   {
@@ -102,7 +108,8 @@
     "\n",
     "# Global attributes\n",
     "print(product_SCS.global_polarisationList)\n",
-    "print(product_SCS.global_orbitPass)"
+    "print(product_SCS.global_orbitPass)\n",
+    "\n"
    ]
   },
   {
@@ -129,6 +136,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "77d99555-4d43-4e6c-a833-1063c06658b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_SCS.plot_lut_variable(\"denoisingHH\", save_geotiff=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87e071e3-c176-4a5e-90e0-b58db71fce9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_SCS.plot_lut_variable(\"sigmaNought\", save_geotiff=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8c743175-1f97-4e92-9cbb-eac9ad24c4fe",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
@@ -139,7 +166,7 @@
     "product_SCS.load_complex_polarizations()\n",
     "\n",
     "# Access complex, amplitude and phase data for specific polarizations\n",
-    "hh_complex = product_SCS.S['HH']      # Complex matrix for HH\n",
+    "hh_complex = product_SCS.S['HH']      # Complex matrix for HH self.S[pol] = amp * np.exp(1j * phase)\n",
     "vv_amplitude = product_SCS.A['VV']    # Amplitude matrix for VV\n",
     "hv_phase = product_SCS.P['HV']        # Phase matrix for HV\n",
     "\n",
@@ -155,11 +182,240 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83e337e8-1416-4bfb-ad34-ca15fe5649a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Plotting amplitude images for each polarization\n",
+    "vmin=-30\n",
+    "vmax=0\n",
+    "cmap='gray'\n",
+    "figsize=(20, 6)\n",
+    "pols = ['HH', 'HV', 'VH', 'VV']\n",
+    "fig, axes = plt.subplots(1, 5, figsize=figsize,\n",
+    "                             gridspec_kw={'width_ratios': [1, 1, 1, 1, 0.05]})\n",
+    "\n",
+    "im = None\n",
+    "for ax, pol in zip(axes[:-1], pols):  # le prime 4 colonne\n",
+    "        amp = product_SCS.A[pol]\n",
+    "        amp_db = 20 * np.log10(np.maximum(amp, 1e-6))\n",
+    "        \n",
+    "        im = ax.imshow(amp_db, cmap=cmap, vmin=vmin, vmax=vmax, aspect='auto')\n",
+    "        ax.set_title(f\"{pol} (dB)\")\n",
+    "        ax.set_xlabel(\"Range\")\n",
+    "        ax.set_ylabel(\"Azimuth\")\n",
+    "\n",
+    "cbar = fig.colorbar(im, cax=axes[-1])\n",
+    "cbar.set_label(\"Amplitude [dB]\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2d6fed80-5f47-412e-a44e-2d7789727fa0",
    "metadata": {},
    "source": [
-    "# 🌍 BIOMASS STA Product Explorer\n",
+    "# 🌍 BIOMASS L1B Product Explorer\n",
+    "\n",
+    "(c) European Space Agency (ESA) - Licensed under  ESA Software Community Licence Permissive (Type 3) – v2.4\n",
+    "\n",
+    "\n",
+    "Welcome to the notebook for exploring BIOMASS L1B products.\n",
+    "This notebook uses the `BiomassProductSCS` class, which allows you to:\n",
+    "- Parse and inspect the product folder structure\n",
+    "- Load and explore LUT (Look-Up Table) variables\n",
+    "- Load complex polarimetric channels (amplitude and phase)\n",
+    "\n",
+    "\n",
+    "👇 Scroll through the next cells to perform step-by-step analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1dfc341-dc7e-4c31-a6b2-8ac9a162bc8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import BiomassProduct\n",
+    "from pathlib import Path\n",
+    "# Define the path to the STA product\n",
+    "test_dgm_path = r\"E:\\BIOMASS\\03_SCRIPTS\\AMAZON\\WD_F158_1C\\BIO_S1_DGM__1S_20250606T221429_20250606T221450_C_G___M___C___T____F158_01_DEFS31\"\n",
+    "product_DGM = BiomassProduct.BiomassProductDGM(test_dgm_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "637e20dc-0a2a-4456-a713-059f3e6ed86c",
+   "metadata": {},
+   "source": [
+    "🧾 Accessing internal product file paths\n",
+    "You can access internal files such as TIFF, NetCDF, XML via attributes of the object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ca5825d-da6a-424e-990d-a4076ec6d995",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"ABS TIFF:     \", product_DGM.measurement_abs_file)\n",
+    "print(\"LUT NetCDF:   \", product_DGM.annotation_lut_file)\n",
+    "print(\"Primary XML:  \", product_DGM.annotation_xml_file)\n",
+    "print(\"Orbit XML:    \", product_DGM.annotation_orb_file)\n",
+    "print(\"Quicklook PNG:\", product_DGM.preview_ql_file) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caaf62da-0c39-4e74-a85e-dd642c13a021",
+   "metadata": {},
+   "source": [
+    "🧩 Accessing LUT variables as attributes After initialization, LUT variables are loaded as attributes using the format: _\n",
+    "\n",
+    "Examples:\n",
+    "- `product_DGM.geometry_latitude`  \n",
+    "- `product_DGM.geometry_longitude`  \n",
+    "- `product_DGM.geometry_incidenceAngle` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "254b0a07-1668-484a-bda4-fc0de13412a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MPH variables \n",
+    "print(product_DGM.sourceProducts[0])\n",
+    "print(product_DGM.sourceProducts[1])\n",
+    "\n",
+    "# Denoising variables\n",
+    "print(product_DGM.denoising_denoisingHH)\n",
+    "print(product_DGM.denoising_denoisingHV)\n",
+    "print(product_DGM.denoising_denoisingVH)\n",
+    "print(product_DGM.denoising_denoisingVV)\n",
+    "\n",
+    "# Geometry variables\n",
+    "print(product_DGM.geometry_latitude)\n",
+    "print(product_DGM.geometry_longitude)\n",
+    "print(product_DGM.geometry_height)\n",
+    "print(product_DGM.geometry_incidenceAngle)\n",
+    "print(product_DGM.geometry_elevationAngle)\n",
+    "print(product_DGM.geometry_terrainSlope)\n",
+    "\n",
+    "# Radiometry variables\n",
+    "print(product_DGM.radiometry_sigmaNought)\n",
+    "print(product_DGM.radiometry_gammaNought)\n",
+    "\n",
+    "# Global attributes\n",
+    "print(product_DGM.global_polarisationList)\n",
+    "print(product_DGM.global_orbitPass)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcd21580-347d-4359-a300-70580fb7d328",
+   "metadata": {},
+   "source": [
+    "🧩 plot_lut_variable(variable_name, save_geotiff=False) Displays a variable as a 2D plot and optionally saves it as a GeoTIFF."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c5a929b-1df9-4b9f-8b77-b50c5f4bc491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_DGM.plot_lut_variable(\"denoisingHH\", save_geotiff=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d7d0068-91bc-4e38-8597-b9feb552e230",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_DGM.plot_lut_variable(\"gammaNought\", save_geotiff=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ada199be-c008-4e9b-9490-0e09bd762c07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_DGM.plot_lut_variable(\"incidenceAngle\", save_geotiff=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e414bf75-19dc-45c2-8f27-36d1b103b7bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_DGM.load_polarizations()\n",
+    "\n",
+    "# amplitude  data for specific polarizations\n",
+    "vv_abs = product_DGM.A['VV']    # Amplitude matrix for VV\n",
+    "\n",
+    "# Print basic information for quick inspection\n",
+    "print(\"\\nVV Amplitude matrix:\")\n",
+    "print(vv_abs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "906938f2-2b2b-4190-9869-5b78772c60be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Plotting abs images for each polarization\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "cmap='gray'\n",
+    "figsize=(20, 6)\n",
+    "pols = ['HH', 'HV', 'VH', 'VV']\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 5, figsize=figsize,\n",
+    "                         gridspec_kw={'width_ratios': [1, 1, 1, 1, 0.05]})\n",
+    "\n",
+    "im = None\n",
+    "for ax, pol in zip(axes[:-1], pols):\n",
+    "    abs_tiff = product_DGM.A[pol]\n",
+    "\n",
+    "    # auto range from percentiles\n",
+    "    vmin, vmax = np.nanpercentile(abs_tiff, (2, 98))\n",
+    "\n",
+    "    im = ax.imshow(abs_tiff, cmap=cmap, vmin=vmin, vmax=vmax, aspect='auto')\n",
+    "    ax.set_title(f\"{pol}\")\n",
+    "    ax.set_xlabel(\"Range\")\n",
+    "    ax.set_ylabel(\"Azimuth\")\n",
+    "\n",
+    "cbar = fig.colorbar(im, cax=axes[-1])\n",
+    "cbar.set_label(\"Amplitude\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c2e3d04-73f5-492d-bee0-d54094e695d3",
+   "metadata": {},
+   "source": [
+    "# 🌍 BIOMASS L1C Product Explorer\n",
     "(c) European Space Agency (ESA) Licensed under ESA Software Community Licence Permissive (Type 3) – v2.4\n",
     "\n",
     "\n",
@@ -181,7 +437,7 @@
    "outputs": [],
    "source": [
     "from  BiomassProduct import BiomassProductSTA\n",
-    "product_STA_path = r\"..\\L1c\\BIO_S3_STA__1S_20170303T094541_20170303T094602_I_G01_M02_C03_T017_F001_01_DBEOLS\" \n",
+    "product_STA_path = r\"E:\\BIOMASS\\03_SCRIPTS\\AMAZON\\WD_F158_1C\\BIO_S1_STA__1S_20250606T221429_20250606T221450_C_G___M___C___T____F158_01_DEMU7D\" \n",
     "product_STA= BiomassProductSTA(product_STA_path)\n",
     "\n",
     "print( product_STA.measurement_phase_file)"
@@ -423,7 +679,7 @@
    "id": "dceea354-daa2-40d7-b8e7-4f374d896679",
    "metadata": {},
    "source": [
-    "# 🌍 BIOMASS L2 FH Product Explorer\n",
+    "# 🌍 BIOMASS L2A FH Product Explorer\n",
     "(c) European Space Agency (ESA) Licensed under ESA Software Community Licence Permissive (Type 3) – v2.4\n",
     "\n",
     "\n",
@@ -454,8 +710,10 @@
    "source": [
     "import BiomassProduct\n",
     "\n",
-    "product_FH__L2A_path = r\"E:\\BIOMASS\\03_SCRIPTS\\example-notebooks\\data\\BIO_FP_FH__L2A_20170125T163833_20170206T163906_T_G03_M03_C___T000_F001_02_D6IOT7\"\n",
-    "product_fh_l2a = BiomassProduct.l2a_fh(product_FH__L2A_path)"
+    "product_FH_L2A_path = r\"..\\L2a\\BIO_FP_FH__L2A_20170225T094535_20170303T094602_I_G01_M02_C___T017_F001_01_DCUCOE\" \n",
+    "\n",
+    "product_fh_l2a = BiomassProduct.l2a_fh(product_FH_L2A_path)\n",
+    "print( product_fh_l2a.measurement_file)"
    ]
   },
   {
@@ -535,8 +793,7 @@
     "product_fh_l2a.check_lut_contents()  # list LUT variables\n",
     "product_fh_l2a.check_tiff_files()    # check main TIFFs\n",
     "product_fh_l2a.check_xml_validity() # check XML annotations\n",
-    "product_fh_l2a.check_and_show_previews() #Check and display the preview images side by side.\n",
-    "\n"
+    "product_fh_l2a.check_and_show_previews() #Check and display the preview images side by side."
    ]
   },
   {
@@ -575,6 +832,55 @@
    "source": [
     "product_fh_l2a.show_tiffs_on_map( scale_factor=1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c18dc37c-727a-4c64-be21-856ea4187328",
+   "metadata": {},
+   "source": [
+    "# 🌍 BIOMASS L2A FD Product Explorer\n",
+    "(c) European Space Agency (ESA) Licensed under ESA Software Community Licence Permissive (Type 3) – v2.4\n",
+    "\n",
+    "\n",
+    "Welcome to the notebook for exploring BIOMASS L2A Forestasgdgfuqerfuqett uiernbvsdmnf(FH) products.\n",
+    "This notebook uses the `l2a_fh` class, which allows you to:\n",
+    "- check the internal structure of the product\n",
+    "- validate key files (TIFF, XML, LUT)\n",
+    "- explore and access LUT variables directly as attributes\n",
+    "- visualize FNF masks as static plots or interactive map overlays\n",
+    "\n",
+    "👇 Scroll through the next cells to perform step-by-step analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9427848-3a45-4f83-bd61-c054f4e77058",
+   "metadata": {},
+   "source": [
+    "##  Load the product"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d9a4582-e3a0-4300-89f9-165fa2e8a66c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import BiomassProduct\n",
+    "\n",
+    "product_FD_L2A_path = r\"..\\L2a\\BIO_FP_FD__L2A_20170225T094535_20170303T094602_I_G01_M02_C___T017_F001_01_DCUCMC\" \n",
+    "product_fd_l2a = BiomassProduct.l2a_fd(product_FD_L2A_path)\n",
+    "print( product_fd_l2a.measurement_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f15304d-a7f0-464b-8143-defc4bf42b72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
