Add file from Muriel

--- a/HowTo_Use_Stack.ipynb
+++ b/HowTo_Use_Stack.ipynb
@@ -34,9 +34,7 @@
   {
    "cell_type": "markdown",
    "id": "24875f3a-4160-4588-9f8d-333a5331996c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 🌿 Section 1: BIOMASS L1C – Amplitude and Phase (COG) Visualization\n",
     "\n",
@@ -80,8 +78,8 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "# Define the folder containing the Level 1c products\n",
-    "#folder_TDS = Path(\"..\") / \"WD_F158_1C\"\n",
-    "folder_TDS = r\"WD_F158_1C\"\n",
+    "folder_TDS = Path(\"..\") / \"L1C\"\n",
+    "#folder_TDS = r\"WD_F158_1C\"\n",
     "# Load the STA product group from the specified folder\n",
     "loader = BiomassProduct.STAProductGroupLoader(folder_TDS)\n",
     "\n",
@@ -241,9 +239,7 @@
   {
    "cell_type": "markdown",
    "id": "a2f6c9fa-a46c-4577-a80b-e7d63a83ce48",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 🌱 Section 2: Reading and Exploring LUT Variables (NetCDF)\n",
     "In this section we:\n",
@@ -285,8 +281,8 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "# Define the folder containing the Level 1c products\n",
-    "#folder_TDS = Path(\"..\") / \"L1c\"\n",
-    "folder_TDS =r\"WD_F158_1C\"\n",
+    "folder_TDS = Path(\"..\") / \"L1C\"\n",
+    "# folder_TDS =r\"WD_F158_1C\"\n",
     "# Load the STA product group from the specified folder\n",
     "loader = BiomassProduct.STAProductGroupLoader(folder_TDS)\n",
     "\n",
@@ -710,13 +706,13 @@
     "fig, axes = plt.subplots(1,2, figsize=(7,6)) \n",
     "# skpCalibrationPhaseScreen\n",
     "if hasattr(product_secondary, \"skpPhaseCalibration_skpCalibrationPhaseScreen\"):\n",
-    "    skpCalibrationPhaseScreen = product_secondary1.skpPhaseCalibration_skpCalibrationPhaseScreen\n",
+    "    skpCalibrationPhaseScreen = np.rad2deg(product_secondary1.skpPhaseCalibration_skpCalibrationPhaseScreen)\n",
     "    skpCalibrationPhaseScreen_avg = np.mean(np.ma.masked_equal(skpCalibrationPhaseScreen, noDataValue))\n",
     "    skpCalibrationPhaseScreen_std = np.std(np.ma.masked_equal(skpCalibrationPhaseScreen, noDataValue))\n",
     "    \n",
     "    ax1 = axes[0].imshow(skpCalibrationPhaseScreen, cmap='rainbow', aspect=aspect_ratio,\n",
-    "        vmin=skpCalibrationPhaseScreen_avg - std_multiplier * skpCalibrationPhaseScreen_std,\n",
-    "        vmax=skpCalibrationPhaseScreen_avg + std_multiplier * skpCalibrationPhaseScreen_std)\n",
+    "        vmin=-180,\n",
+    "        vmax=180)\n",
     "    axes[0].set_title(\"skpCalibrationPhasesScreen [deg]\")\n",
     "    fig.colorbar(ax1, ax=axes[0], orientation='vertical', fraction=colorbar_fraction, pad=colorbar_pad)\n",
     "else:\n",
@@ -730,8 +726,8 @@
     "    skpCalibrationPhaseScreenQuality_std = np.std(np.ma.masked_equal(skpCalibrationPhaseScreenQuality, noDataValue))\n",
     "    \n",
     "    ax2 = axes[1].imshow(skpCalibrationPhaseScreenQuality, cmap='rainbow', aspect=aspect_ratio,\n",
-    "        vmin=skpCalibrationPhaseScreenQuality_avg - std_multiplier * skpCalibrationPhaseScreenQuality_std,\n",
-    "        vmax=skpCalibrationPhaseScreenQuality_avg + std_multiplier * skpCalibrationPhaseScreenQuality_std)\n",
+    "        vmin=-180,\n",
+    "        vmax=180)\n",
     "    axes[1].set_title(\"skpCalibrationPhasesScreenQuality\")\n",
     "    axes[1].yaxis.set_tick_params(labelleft=False)\n",
     "    fig.colorbar(ax2, ax=axes[1], orientation='vertical', fraction=colorbar_fraction, pad=colorbar_pad)\n",
@@ -829,9 +825,7 @@
   {
    "cell_type": "markdown",
    "id": "68fb8688-a199-4914-8fe1-084a5e35957a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 🍃 Section 3:  upsampling of luts into the slc grid\n"
    ]
@@ -870,8 +864,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#folder_TDS = Path(\"..\") / \"L1c\"\n",
-    "folder_TDS = Path(r\"WD_F158_1C\")\n",
+    "folder_TDS = Path(\"..\") / \"L1C\"\n",
+    "# folder_TDS = Path(r\"WD_F158_1C\")\n",
     "print (folder_TDS)\n",
     "loader = BiomassProduct.STAProductGroupLoader(folder_TDS)\n",
     "loader.print_summary()\n",
@@ -1427,8 +1421,8 @@
     "    skpCalibrationPhaseScreen_co_upsampled, \n",
     "    cmap='rainbow',\n",
     "    aspect=aspect_ratio,\n",
-    "    vmin =  skpCalibrationPhaseScreen_co_upsampled_avg - std_multiplier* skpCalibrationPhaseScreen_co_upsampled_std,\n",
-    "    vmax =  skpCalibrationPhaseScreen_co_upsampled_avg + std_multiplier* skpCalibrationPhaseScreen_co_upsampled_std,\n",
+    "    vmin =  -np.pi,\n",
+    "    vmax =  np.pi,\n",
     "    interpolation=\"none\"\n",
     ")\n",
     "axes[2].set_title('skpCalibrationPhaseScreen [rad]')\n",
@@ -1532,9 +1526,7 @@
   {
    "cell_type": "markdown",
    "id": "46632bf4",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 🌲Section 4: Basic Interferometry"
    ]
@@ -1586,7 +1578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_TDS = Path(r\"WD_F158_1C\") \n",
+    "folder_TDS = Path(\"..\") / \"L1C\"\n",
     "\n",
     "loader = BiomassProduct.STAProductGroupLoader(folder_TDS)\n",
     "loader.print_summary()\n",
@@ -1693,16 +1685,6 @@
     "\n",
     "hh_slc_pri, xx_slc_pri, vv_slc_pri = read_complex_channels(data_primary_abs, data_primary_phase)\n",
     "hh_slc_sec, xx_slc_sec, vv_slc_sec = read_complex_channels(data_secondary_abs, data_secondary_phase)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64841877",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(noDataValue*np.exp(1j * noDataValue))"
    ]
   },
   {
@@ -2154,8 +2136,8 @@
     "    cmap=\"rainbow\",\n",
     "    aspect=aspect_ratio, \n",
     "    interpolation=\"none\",\n",
-    "    vmin =  skpCalibrationPhaseScreen_avg - std_multiplier* skpCalibrationPhaseScreen_std,\n",
-    "    vmax =  skpCalibrationPhaseScreen_avg + std_multiplier* skpCalibrationPhaseScreen_std\n",
+    "    vmin =  -np.pi,\n",
+    "    vmax =  np.pi\n",
     ")\n",
     "ax[1].set_title('skpCalibrationPhaseScreen_co_upsampled [rad]')\n",
     "fig.colorbar(ax2, ax=ax[1], orientation='vertical', fraction=colorbar_fraction, pad=colorbar_pad)\n",
@@ -2324,8 +2306,8 @@
     "    interferogram_hh_deg, \n",
     "    cmap='rainbow',\n",
     "    aspect=aspect_ratio,\n",
-    "    vmin =  interferogram_hh_avg - std_multiplier* interferogram_hh_std,\n",
-    "    vmax =  interferogram_hh_avg + std_multiplier* interferogram_hh_std,\n",
+    "    vmin =  -180,\n",
+    "    vmax =  180,\n",
     "    interpolation=interpolation\n",
     ")\n",
     "axes[0,0].set_title('interferogram_hh_deg \\n [deg]')\n",
@@ -2335,8 +2317,8 @@
     "    interferogram_xx_deg, \n",
     "    cmap='rainbow',\n",
     "    aspect=aspect_ratio,\n",
-    "    vmin =  interferogram_xx_avg - std_multiplier* interferogram_xx_std,\n",
-    "    vmax =  interferogram_xx_avg + std_multiplier* interferogram_xx_std,\n",
+    "    vmin =  -180,\n",
+    "    vmax =  180,\n",
     "    interpolation=interpolation\n",
     ")\n",
     "axes[0,1].set_title('interferogram_xx_deg \\n [deg]')\n",
@@ -2347,8 +2329,8 @@
     "    interferogram_vv_deg, \n",
     "    cmap='rainbow',\n",
     "    aspect=aspect_ratio,\n",
-    "    vmin =  interferogram_vv_avg - std_multiplier* interferogram_vv_std,\n",
-    "    vmax =  interferogram_vv_avg + std_multiplier* interferogram_vv_std,\n",
+    "    vmin =  -180,\n",
+    "    vmax =  180,\n",
     "    interpolation=interpolation\n",
     "    \n",
     ")\n",
@@ -2359,8 +2341,8 @@
     "    interferogram_hh_flat_deg, \n",
     "    cmap='rainbow',\n",
     "    aspect=aspect_ratio,\n",
-    "    vmin =  interferogram_hh_flat_avg - std_multiplier* interferogram_hh_flat_std,\n",
-    "    vmax =  interferogram_hh_flat_avg + std_multiplier* interferogram_hh_flat_std,\n",
+    "    vmin =  -180,\n",
+    "    vmax =  180,\n",
     "    interpolation=interpolation\n",
     ")\n",
     "axes[1,0].set_title('interferogram_hh_flat_deg \\n [deg]')\n",
@@ -2370,8 +2352,8 @@
     "    interferogram_xx_flat_deg, \n",
     "    cmap='rainbow',\n",
     "    aspect=aspect_ratio,\n",
-    "    vmin =  interferogram_xx_flat_avg - std_multiplier* interferogram_xx_flat_std,\n",
-    "    vmax =  interferogram_xx_flat_avg + std_multiplier* interferogram_xx_flat_std,\n",
+    "    vmin =  -180,\n",
+    "    vmax =  180,\n",
     "    interpolation=interpolation\n",
     ")\n",
     "axes[1,1].set_title('interferogram_xx_flat_deg \\n [deg]')\n",
@@ -2382,8 +2364,8 @@
     "    interferogram_vv_flat_deg, \n",
     "    cmap='rainbow',\n",
     "    aspect=aspect_ratio,\n",
-    "    vmin =  interferogram_vv_flat_avg - std_multiplier* interferogram_vv_flat_std,\n",
-    "    vmax =  interferogram_vv_flat_avg + std_multiplier* interferogram_vv_flat_std,\n",
+    "    vmin =  -180,\n",
+    "    vmax =  180,\n",
     "    interpolation=interpolation\n",
     "    \n",
     ")\n",
